--- a/project/src/App.css
+++ b/project/src/App.css
@@ -48,9 +48,11 @@
   left: 760px;
 }
 .book__marks {
-  width: 7px;
-  height: 3.5px;
-  
+  width: 30px;
+  height: 25px;
+  z-index: 20;
+  transform: translateY(-160px);
+  margin-left: 1500px;
 }
 .cart {
   position: absolute;
@@ -113,4 +115,101 @@
 .Slider {
   width: 100%;
   height: 100%;
+}
+.slider__button {
+  position: absolute;
+  z-index: 10;
+ bottom: 655px;
+ font-size: 20px;
+ left: 490px;
+  width: 163px;
+  height: 52px;
+  border-radius: 100px;
+  font-weight: 700;
+  border: none;
+  color: white;
+  background-color: #F9A82F;
+}
+
+/* Стили для модального окна */  
+.modal {  
+  display: flex;  
+  position: fixed;  
+  z-index: 1000;  
+  left: 0;  
+  top: 0;  
+  width: 100%;  
+  height: 100%;  
+  background-color: rgba(0,0,0,0.5); /* Полупрозрачный фон */  
+  justify-content: center; /* Центрируем модальное окно */  
+  align-items: center; /* Центрируем модальное окно */  
+}  
+
+.modal__content {  
+  background-color: #fefefe;  
+  padding: 20px;  
+  border: 1px solid #888;  
+  width: 300px; /* Ширина модального окна */  
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Тень для модального окна */  
+  position: relative; /* Относительное позиционирование */  
+}  
+
+.close {  
+  color: #aaa;  
+  float: right;  
+  font-size: 28px;  
+  font-weight: bold;  
+  cursor: pointer; /* Курсор как указатель */  
+}  
+
+.close:hover,  
+.close:focus {  
+  color: black; /* Цвет текста при наведении */  
+}
+
+/* Основной стиль для контейнера корзины */  
+.cart {  
+  position: fixed; /* Фиксированное положение */  
+  top: 20px;      /* Отступ от верхней границы */  
+  right: 20%;    /* Отступ от правой границы */  
+  width: 140px;  /* Ширина корзины */  
+  padding: 20px; /* Внутренние отступы */  
+  background-color: #f9f9f9; /* Цвет фона */  
+  z-index: 1000; /* Чтобы корзина всегда была выше других элементов */  
+}  
+
+/* Заголовок корзины */  
+.cart h2 {  
+  margin: 0 0 15px; /* Отступы для заголовка */  
+  font-size: 20px; /* Размер шрифта */  
+}  
+
+/* Список товаров */  
+.cart ul {  
+  list-style-type: none; /* Без маркировки списка */  
+  padding: 0; /* Убираем внутренние отступы */  
+  margin: 0; /* Убираем внешние отступы */  
+}  
+
+/* Элементы списка */  
+.cart li {  
+  padding: 10px 0; /* Внутренние отступы для элементов списка */  
+  border-bottom: 1px solid #eee; /* Разделитель между элементами списка */  
+}  
+
+/* Кнопки */  
+button {  
+  margin-top: 10px; /* Отступ сверху для кнопок */  
+  padding: 10px 15px; /* Внутренние отступы */  
+  background-color: #007bff; /* Цвет фона кнопки */  
+  color: white; /* Цвет текста */  
+  border: none; /* Без рамки */  
+  border-radius: 5px; /* Скругленные углы */  
+  cursor: pointer; /* Курсор при наведении */  
+  transition: background-color 0.3s; /* Плавный переход цвета */  
+}  
+
+/* Эффект при наведении на кнопку */  
+button:hover {  
+  background-color: #0056b3; /* Темный оттенок фона при наведении */  
 }
